implemented pagination with last fetched key
