# pkg/api/controllers/get_recent_posts_controller.go
@@ -10,36 +10,33 @@ import (
 	handlerModel "github.com/whkelvin/stamp/pkg/features/get_recent_posts/handler/models"
 )
 
-func parseParams(params GetRecentPostsParams) (int32, int32, error) {
-	var page int32 = 1
+func parseParams(params GetRecentPostsParams) (string, int32, error) {
+	var lastFetchedItemId string = ""
 	var size int32 = 10
 
-	if params.Page != nil {
-		page = *params.Page
-		if page < 1 {
-			return 0, 0, errors.New("Field 'page' has to be greater than or equal to 1.")
-		}
+	if params.LastFetchedItemId != nil {
+		lastFetchedItemId = *params.LastFetchedItemId
 	}
 
 	if params.Size != nil {
 		size = *params.Size
 		if size <= 0 {
-			return 0, 0, errors.New("Field 'size' has to be greater than zero.")
+			return "", 0, errors.New("Field 'size' has to be greater than zero.")
 		}
 	}
-	return page, size, nil
+	return lastFetchedItemId, size, nil
 }
 
 func (server *ApiServer) GetRecentPosts(ctx echo.Context, params GetRecentPostsParams) error {
 
-	page, size, err := parseParams(params)
+	lastFetchedItemId, size, err := parseParams(params)
 	if err != nil {
 		return ctx.String(http.StatusBadRequest, err.Error())
 	}
 
 	handlerReq := handlerModel.Request{
-		Skip: int((page - 1) * (size)),
-		Take: int(size),
+		LastFetchedItemId: lastFetchedItemId,
+		Take:              int(size),
 	}
 
 	result, err := server.GetRecentPostsHandler.GetRecentPosts(ctx.Request().Context(), handlerReq)
@@ -52,7 +49,6 @@ func (server *ApiServer) GetRecentPosts(ctx echo.Context, params GetRecentPostsP
 			Count:    0,
 			PageSize: size,
 			Posts:    []Post{},
-			Page:     page,
 		}
 		return ctx.JSON(http.StatusOK, res)
 	}
@@ -73,7 +69,6 @@ func (server *ApiServer) GetRecentPosts(ctx echo.Context, params GetRecentPostsP
 		Count:    int32(len(posts)),
 		PageSize: size,
 		Posts:    posts,
-		Page:     page,
 	}
 
 	return ctx.JSON(http.StatusOK, res)
