# pkg/api/generated/gen.go
@@ -1,13 +1,14 @@
 // Package models provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
-package generated
+package models
 
 import (
 	"fmt"
+	"net/http"
+
 	"github.com/deepmap/oapi-codegen/pkg/runtime"
 	"github.com/labstack/echo/v4"
-	"net/http"
 )
 
 const (
@@ -35,7 +36,6 @@ type PostPostRequest struct {
 // PostResultSet defines model for PostResultSet.
 type PostResultSet struct {
 	Count    int32  `json:"count"`
-	Page     int32  `json:"page"`
 	PageSize int32  `json:"pageSize"`
 	Posts    []Post `json:"posts"`
 }
@@ -45,8 +45,8 @@ type GetRecentPostsParams struct {
 	// Size Number of results are included in a page
 	Size *int32 `form:"size,omitempty" json:"size,omitempty"`
 
-	// Page Page number
-	Page *int32 `form:"page,omitempty" json:"page,omitempty"`
+	// LastFetchedItemId Guid of the last fetched item, used to retrive next batch of postings. Empty will return the first page.
+	LastFetchedItemId *string `form:"lastFetchedItemId,omitempty" json:"lastFetchedItemId,omitempty"`
 }
 
 // CreatePostJSONRequestBody defines body for CreatePost for application/json ContentType.
@@ -91,11 +91,11 @@ func (w *ServerInterfaceWrapper) GetRecentPosts(ctx echo.Context) error {
 		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter size: %s", err))
 	}
 
-	// ------------- Optional query parameter "page" -------------
+	// ------------- Optional query parameter "lastFetchedItemId" -------------
 
-	err = runtime.BindQueryParameter("form", true, false, "page", ctx.QueryParams(), &params.Page)
+	err = runtime.BindQueryParameter("form", true, false, "lastFetchedItemId", ctx.QueryParams(), &params.LastFetchedItemId)
 	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter page: %s", err))
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter lastFetchedItemId: %s", err))
 	}
 
 	// Invoke the callback with all the unmarshalled arguments
