# pkg/api/generated/spec/openapi.yaml
@@ -52,14 +52,12 @@ paths:
             type: integer
             format: int32
             minimum: 0
-        - name: page
+        - name: lastFetchedItemId
           in: query
           required: false
-          description: Page number
+          description: Guid of the last fetched item, used to retrive next batch of postings. Empty will return the first page.
           schema:
-            type: integer
-            format: int32
-            minimum: 1
+            type: string
       responses:
         "200":
           description: successful
@@ -119,7 +117,6 @@ components:
       required:
         - count
         - posts
-        - page
         - pageSize
       properties:
         count:
@@ -133,9 +130,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Post"
-        page:
-          type: integer
-          format: int32
         pageSize:
           type: integer
           format: int32
