# pkg/features/get_recent_posts/handler/models/request.go
@@ -1,6 +1,6 @@
 package models
 
 type Request struct {
-	Take int
-	Skip int
+	Take              int
+	LastFetchedItemId string
 }
